--- a/Cocktail.html
+++ b/Cocktail.html
@@ -13,7 +13,7 @@
 
 <section  class="titleVideo">
 	<div>
-		<video class="normal" src="videos/production_id_3772392.mp4" autoplay muted loop ></video>
+		<video class="normal" type="video/mp4" src="videos/production_id_3772392.mp4" autoplay muted loop ></video>
 		<div id="overlay">
 		    <h1>
 		    	Cocktail Crashcourse
